// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PropertyRow — snapshot > matches snapshot — editable cell with revert button 1`] = `
<div>
  <div
    class="flex items-center gap-2 py-1 text-[length:var(--text-xs-font-size)]"
    data-property="font-size"
    data-testid="property-row-font-size"
  >
    <div
      class="w-32 shrink-0 truncate font-mono text-[hsl(var(--text-muted))]"
      title="font-size"
    >
      font-size
    </div>
    <div
      class="flex min-w-0 flex-1 items-center gap-1 rounded border border-[hsl(var(--text-link))] bg-[hsl(var(--bg-surface-alt))] px-2 py-1 text-[hsl(var(--text-primary))]"
      data-active="true"
      data-editable="true"
      data-empty="false"
    >
      <input
        class="min-w-0 flex-1 bg-transparent font-mono text-[hsl(var(--text-primary))] outline-none"
        data-testid="property-row-font-size-input"
        size="4"
        type="text"
        value="16"
      />
      <span
        class="font-mono text-[hsl(var(--text-muted))]"
      >
        px
      </span>
    </div>
    <button
      aria-label="Revert font-size to base value"
      class="shrink-0 rounded text-[hsl(var(--text-muted))] hover:text-[hsl(var(--text-primary))]"
      data-testid="property-row-font-size-revert"
      title="Revert to base value (remove tweak)"
      type="button"
    >
      ↺
    </button>
  </div>
</div>
`;

exports[`PropertyRow — snapshot > matches snapshot — empty cell renders em-dash 1`] = `
<div>
  <div
    class="flex items-center gap-2 py-1 text-[length:var(--text-xs-font-size)]"
    data-property="font-size"
    data-testid="property-row-font-size"
  >
    <div
      class="w-32 shrink-0 truncate font-mono text-[hsl(var(--text-muted))]"
      title="font-size"
    >
      font-size
    </div>
    <div
      class="flex min-w-0 flex-1 items-center gap-1 rounded border border-[hsl(var(--text-link))] bg-[hsl(var(--bg-surface-alt))] px-2 py-1 text-[hsl(var(--text-primary))]"
      data-active="true"
      data-editable="false"
      data-empty="true"
    >
      <span
        class="font-mono text-[hsl(var(--text-muted))]"
      >
        —
      </span>
    </div>
  </div>
</div>
`;

exports[`PropertyRow — snapshot > matches snapshot — read-only cell with value 1`] = `
<div>
  <div
    class="flex items-center gap-2 py-1 text-[length:var(--text-xs-font-size)]"
    data-property="padding-left"
    data-testid="property-row-padding-left"
  >
    <div
      class="w-32 shrink-0 truncate font-mono text-[hsl(var(--text-muted))]"
      title="padding-left"
    >
      padding-left
    </div>
    <div
      class="flex min-w-0 flex-1 items-center gap-1 rounded border border-[hsl(var(--text-link))] bg-[hsl(var(--bg-surface-alt))] px-2 py-1 text-[hsl(var(--text-primary))]"
      data-active="true"
      data-editable="false"
      data-empty="false"
    >
      <span
        class="font-mono"
        data-testid="property-row-padding-left-cell"
      >
        8px
      </span>
    </div>
  </div>
</div>
`;
